fixed text formatting and spacing
Fixed text formatting and spacing problems

--- a/docs/style.css
+++ b/docs/style.css
@@ -140,7 +140,12 @@ nav {
   .step {
         margin-bottom: 8rem; /* Increased from the default */
   }
+
+  .extra-space-after {
+        margin-bottom: 15rem;
   }
+
+ }
 
 #intro {
   /* margin-bottom: 320px; */
